feat: 增加容器启动时幂等创建平台管理员
